# RustyGPT

./: .deployment-info  .env.template  .gitignore  .secignore  404.html  AGENT.md  CHANGELOG.md  CNAME  CODE_FIXES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  E-SPEC-0001-RUSTY-GPT-DOCS.md  Justfile  LICENSE  README.md  REPOSITORY_RULESETS.md  ROADMAP.md  RustyGPT-AI-Group-Chat-Spec-HYPER.md  SECURITY.md  SECURITY_AUDIT.md  TODO.md  Trunk.toml  book.toml  codealike.json  config.example.toml  config.example.yaml  docker-compose.yaml  index.html  print.html  rusty_gpt_local.session.sql  searchindex.js  test_server_config.rs  test_sse_fix.rs  toc.html  toc.js
backend/: Cargo.toml
backend/src/: app_state.rs  main.rs  main_test.rs  openapi.rs  routes.rs
backend/src/commands/: config.rs  mod.rs  server.rs  server_test.rs  spec.rs
backend/src/handlers/: apple_auth.rs  apple_auth_test.rs  conversation.rs  conversation_test.rs  github_auth.rs  github_auth_test.rs  mod.rs  setup.rs  streaming.rs
backend/src/routes/: auth.rs  auth_test.rs  mod.rs  openapi.rs  protected.rs  protected_test.rs  setup.rs
backend/src/services/: mod.rs  oauth_service.rs  oauth_service_test.rs  setup.rs
frontend/: Cargo.toml  Trunk.toml  auth-success.html  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: api.rs  app.rs  language.rs  main.rs  routes.rs
frontend/src/components/: button.rs  card.rs  chat_input.rs  chat_input_test.rs  chat_list.rs  chat_list_test.rs  chat_view.rs  chat_view_test.rs  language_selector.rs  language_selector_button.rs  menu_item.rs  mod.rs  modal.rs  streaming_message.rs  table.rs  test_component.rs  theme_switcher.rs  user_dropdown.rs
frontend/src/components/dashboard/: chart.rs  mod.rs  stats_card.rs
frontend/src/components/modal/: dialog.rs  mod.rs
frontend/src/components/table/: data_table.rs  mod.rs
frontend/src/containers/: header.rs  layout.rs  left_sidebar.rs  mod.rs  page_content.rs  right_sidebar.rs  setup.rs  setup_test.rs
frontend/src/models/: app_state.rs  header.rs  mod.rs  right_sidebar.rs  shared.rs  shared_test.rs  sidebar.rs  sidebar_store.rs
frontend/src/pages/: dashboard.rs  error.rs  mod.rs  profile.rs  roles.rs  settings.rs  transactions.rs  users.rs
frontend/src/styles/: main.css
frontend/src/utils/: local_storage.rs
frontend/translations/: de.json  en.json  es.json  fr.json
rustygpt-cli/: Cargo.toml  config.yaml  test_spec.json  test_spec.yaml
rustygpt-cli/src/: main.rs
rustygpt-cli/src/commands/: chat.rs  completion.rs  config.rs  mod.rs  session.rs  spec.rs
rustygpt-cli/tests/: chat_integration_tests.rs
rustygpt-doc-indexer/: Cargo.toml  README.md
rustygpt-doc-indexer/src/: main.rs
rustygpt-server/: Cargo.toml
rustygpt-server/src/: app_state.rs  lib.rs  main.rs  main_tests.rs  openapi.rs  server.rs  server_test.rs  server_tests.rs  tracer.rs  tracer_tests.rs
rustygpt-server/src/auth/: session.rs
rustygpt-server/src/commands/: config.rs
rustygpt-server/src/db/: bootstrap.rs
rustygpt-server/src/handlers/: admin_limits.rs  apple_auth.rs  apple_auth_test.rs  apple_auth_tests.rs  auth.rs  conversation.rs  conversation_test.rs  conversation_tests.rs  conversations.rs  copilot.rs  github_auth.rs  github_auth_test.rs  github_auth_tests.rs  mod.rs  oauth_testable.rs  setup.rs  streaming.rs  threads.rs
rustygpt-server/src/handlers/auth/: tests.rs
rustygpt-server/src/http/: error.rs  mod.rs  problem.rs
rustygpt-server/src/middleware/: auth.rs  csrf.rs  mod.rs  rate_limit.rs  request_context.rs  security.rs
rustygpt-server/src/routes/: admin.rs  auth.rs  auth_test.rs  copilot.rs  health.rs  mod.rs  openapi.rs  openapi_tests.rs  protected.rs  protected_test.rs  setup.rs  well_known.rs
rustygpt-server/src/services/: assistant_service.rs  chat_service.rs  conversation_service.rs  message_service.rs  mod.rs  oauth_service.rs  oauth_service_trait.rs  setup.rs  setup_test.rs  sse_persistence.rs  stream_supervisor.rs  user_service.rs
rustygpt-server/tests/: integration_tests.rs
rustygpt-shared/: Cargo.toml
rustygpt-shared/src/: lib.rs
rustygpt-shared/src/config/: integration_tests.rs  llm.rs  mod.rs  server.rs  server_integration_test.rs
rustygpt-shared/src/llms/: README.md  context.rs  errors.rs  examples.rs  hardware.rs  llama_cpp.rs  mod.rs  traits.rs  types.rs
rustygpt-shared/src/models/: chat.rs  conversation.rs  errors.rs  limits.rs  message.rs  mod.rs  setup.rs  streaming.rs  threads.rs  timestamp.rs  user.rs
rustygpt-tools/confuse/: Cargo.toml  README.md
rustygpt-tools/confuse/src/: main.rs
rustygpt-tools/confuse/tests/: async_tests.rs  cli_parsing_tests.rs  cli_tests.rs  integration_tests.rs
rustygpt-tools/i18n-agent/: Cargo.toml
rustygpt-tools/i18n-agent/src/: analyzer.rs  generator.rs  lib.rs  main.rs  reporter.rs  scanner.rs
rustygpt-tools/i18n-agent/tests/: lib.rs
rustygpt-web/: .gitignore  Cargo.toml
rustygpt-web/src/: api.rs  api_test.rs  app.rs  app_test.rs  config.rs  language.rs  main.rs  main_test.rs  routes.rs  routes_test.rs  routes_test_new.rs
rustygpt-web/src/components/: header_nav_item.rs  language_selector.rs  loading.rs  message_node.rs  mod.rs  streaming_message.rs  streaming_message_test.rs  theme_switcher.rs  thread_composer.rs  thread_list.rs  thread_view.rs  typing_indicator.rs  user_dropdown.rs
rustygpt-web/src/containers/: header.rs  layout.rs  mod.rs  page_content.rs  setup.rs  setup_validation.rs
rustygpt-web/src/models/: app_state.rs
rustygpt-web/src/pages/: chat.rs  dashboard.rs  error.rs  login.rs  mod.rs  profile.rs  roles.rs  settings.rs  users.rs
rustygpt-web/translations/: de.json  en.json  es.json  fr.json
shared/: Cargo.toml
shared/src/models/: conversation.rs  errors.rs  message.rs  mod.rs  oauth.rs  setup.rs  streaming.rs  timestamp.rs  user.rs
tools/confuse/: Cargo.toml
tools/confuse/src/: main.rs
tools/i18n-agent/: Cargo.toml  README.md
tools/i18n-agent/src/: analyzer.rs  generator.rs  lib.rs  main.rs  reporter.rs  scanner.rs
tools/i18n-agent/tests/: lib.rs  mod.rs
(+968 files in other folders)
