[workspace]
resolver = "2"
members = [
  "rustygpt-cli",
  "rustygpt-server",
  "rustygpt-shared",
  "rustygpt-tools/confuse",
  "rustygpt-tools/i18n-agent",
  "rustygpt-web",
  "rustygpt-doc-indexer",
]

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }

[workspace.package]
description = "RustyGPT – a Rust-based chat assistant platform with server, CLI, and web clients."
license = "Apache-2.0"
repository = "https://github.com/vanna/rusty_gpt"
readme = "README.md"
keywords = ["chatbot", "ai", "cli", "web", "sse"]
categories = ["command-line-utilities", "web-programming::http-server"]

[workspace.dependencies]
# Core Rust dependencies
anyhow = "1.0"
thiserror = "2.0"

# Async runtime and streams
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util", "sync"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# HTTP and web framework
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1.7", features = ["client", "http1", "full"] }
hyper-rustls = { version = "0.27", features = ["http1", "webpki-roots"] }
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
http = "1.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower-service = "0.3"

# OAuth and authentication
oauth2 = "5.0"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.9"
rand_core = "0.9"
sha2 = "0.10"
base64 = "0.22"
time = "0.3"

# Database
sqlx = { version = "0.8", features = [
  "postgres",
  "macros",
  "runtime-tokio",
  "uuid",
  "chrono",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0"
toml = "0.9"
cookie = "0.18"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# OpenAPI documentation
utoipa = { version = "5.4", features = [
  "macros",
  "yaml",
  "axum_extras",
  "debug",
  "chrono",
  "time",
  "decimal_float",
  "uuid",
  "url",
  "openapi_extensions",
] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum", "reqwest"] }

# Frontend/WASM
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
yew-router = "0.18"
yew_icons = { version = "0.8", features = [
  "heroicons_solid",
  "heroicons_outline",
  "heroicons_mini_solid",
] }
yewdux = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Clipboard",
  "console",
  "CssStyleDeclaration",
  "EventSource",
  "Headers",
 "HtmlInputElement",
 "HtmlSelectElement",
 "HtmlStyleElement",
  "HtmlDocument",
  "MediaQueryList",
  "MessageEvent",
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "ScrollToOptions",
  "Window",
] }
gloo-storage = "0.3"
gloo-timers = "0.3"

# Internationalization
i18nrs = { version = "0.1", features = ["yew"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "v5", "js"] }
regex = { version = "1", features = ["unicode"] }
dotenv = "0.15"
colored = "3.0"
once_cell = "1.19"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
walkdir = "2.5"
shlex = "1.3"
url = { version = "2.5", features = ["serde"] }
directories = "6.0"
jsonschema = "0.17"

# Logging and tracing
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
log = "0.4"
env_logger = "0.11"

# Workspace crates
shared = { version = "0.1", path = "rustygpt-shared" }
server = { version = "0.1", path = "rustygpt-server" }

# Test dependencies
axum-test = "18.1"
wasm-bindgen-test = "0.3"
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.23"
mockall = "0.13"
serial_test = "3.2"
test-case = "3.3"
