[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
futures-util = "0.3"
http = "1"
hyper = { version = "1", features = ["client", "http1", "full"] }
hyper-rustls = { version = "0.27", features = ["http1", "webpki-roots"] }
oauth2 = "5"
regex = { version = "1", features = ["unicode"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = [
  "postgres",
  "macros",
  "runtime-tokio",
  "uuid",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
tower-service = "0.3"
uuid = { version = "1", features = ["serde", "v4", "js"] }
shared = { path = "../shared" }
utoipa = { git = "https://github.com/juhaku/utoipa.git", rev = "ca6b2a5", features = [
  "macros",
  "yaml",
  "axum_extras",
  "debug",
  "chrono",
  "time",
  "decimal_float",
  "uuid",
  "url",
  "openapi_extensions",
] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", rev = "ca6b2a5", features = ["axum", "reqwest"] }

[dev-dependencies]
axum-test = "17.2.0"
tower = "0.5.2"
