[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3", features = [
  "HtmlInputElement",
  "EventSource",
  "MessageEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "console",
] }
shared = { path = "../shared" }
