[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dotenv = { workspace = true }
futures-util = "0.3"
http = "1"
hyper = { version = "1", features = ["client", "http1", "full"] }
hyper-rustls = { version = "0.27", features = ["http1", "webpki-roots"] }
oauth2 = "5"
reqwest = "0.12"
shared = { workspace = true }
sqlx = { version = "0.8", features = [
  "postgres",
  "macros",
  "runtime-tokio",
  "uuid",
] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower-service = "0.3"
utoipa = { version = "5", features = [
  "macros",
  "yaml",
  "axum_extras",
  "debug",
  "chrono",
  "time",
  "decimal_float",
  "uuid",
  "url",
  "openapi_extensions",
] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "reqwest"] }

[dev-dependencies]
axum-test = "17"
tower = "0.5"
