[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
server = { workspace = true }
shared = { workspace = true, features = ["server"] }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-service = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
axum-test = { workspace = true }
predicates = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
