[package]
name = "rustygpt-doc-indexer"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "RustyGPT mdBook companion that builds machine-readable doc manifests."
license = "Apache-2.0"
repository = "https://github.com/vanna/rusty_gpt"
readme = "README.md"
keywords = ["docs", "mdbook", "rustygpt", "indexer", "llm"]
categories = ["command-line-utilities", "development-tools::build-utilities"]

[dependencies]
anyhow = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
jsonschema = { workspace = true }
