[package]
name = "server"
version = "0.1.0"
edition = "2024"
description = "RustyGPT HTTP server powering authentication, conversations, and SSE streaming."
license = "Apache-2.0"
repository = "https://github.com/vanna/rusty_gpt"
readme = "../README.md"
keywords = ["rustygpt", "server", "sse", "chatbot", "axum"]
categories = ["web-programming::http-server"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
oauth2 = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
shared = { workspace = true, features = ["server"] }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-service = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
cookie = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
serial_test = { workspace = true }
tower = { workspace = true }
tempfile = { workspace = true }
