[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
yew = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
