[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
yew = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
futures-util = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
llama_cpp = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true }

[features]
default = ["tokio"]
server = ["tokio"]

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
