[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
gloo-storage = { workspace = true }
gloo-timers = { workspace = true }
i18nrs = { workspace = true }
js-sys = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
yew = { version = "0.21", features = ["csr", "ssr"] }
yew-hooks = { workspace = true }
yew_icons = { workspace = true }
yew-router = { workspace = true }
yewdux = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
