[package]
name = "web"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "RustyGPT Yew-based web client for login, chat, and admin dashboards."
license = "Apache-2.0"
repository = "https://github.com/vanna/rusty_gpt"
readme = "../README.md"
keywords = ["rustygpt", "web", "yew", "chatbot", "sse"]
categories = ["wasm"]

[dependencies]
chrono = { workspace = true }
gloo-storage = { workspace = true }
gloo-timers = { workspace = true }
i18nrs = { workspace = true }
js-sys = { workspace = true }
regex = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../rustygpt-shared", default-features = false }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
yew = { workspace = true }
yew-hooks = { workspace = true }
yew_icons = { workspace = true }
yew-router = { workspace = true }
yewdux = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
