[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version="5", features = [
  "macros",
  "yaml",
  "axum_extras",
  "debug",
  "chrono",
  "time",
  "decimal_float",
  "uuid",
  "url",
  "openapi_extensions",
] }
utoipa-axum = "0.2"

[dev-dependencies]
serde_json = "1"
