[package]
name = "confuse"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
serial_test = { workspace = true }
