[package]
name = "confuse"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Internal developer tooling for RustyGPT configuration and troubleshooting."
license = "Apache-2.0"
repository = "https://github.com/vanna/rusty_gpt"
readme = "../../README.md"
keywords = ["rustygpt", "tools", "dev", "cli", "config"]
categories = ["development-tools::build-utils"]

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
serial_test = { workspace = true }
