[package]
name = "i18n-agent"
version = "0.1.0"
edition = "2021"
description = "A tool for managing i18n translation files"
license = "Apache-2.0"
repository = "https://github.com/vanna/rusty_gpt"
readme = "../../README.md"
keywords = ["rustygpt", "i18n", "internationalization", "tooling"]
categories = ["internationalization"]

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
test-case = { workspace = true }
mockall = { workspace = true }
