[package]
name = "i18n-agent"
version = "0.1.0"
edition = "2021"
description = "A tool for managing i18n translation files"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
colored = "3"
anyhow = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
assert_fs = "1.1"
predicates = "3.1"
test-case = "3.3"
mockall = "0.12"
